corrections for padding issues on Safari, added edited audio files, delayed win modal

--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ header .title {
   background-color: #E24444;
   color: white;
   font-size: 1.3rem;
+  padding-left: 3px;
+  padding-right: 3px;
 }
 
 button {
@@ -64,7 +66,6 @@ button {
 
 .card-wrapper{
   width: 16.6%;
-  box-shadow: 5px;
   display: flex;
   justify-content: center;
 }
@@ -80,6 +81,7 @@ button {
   background-position: center;
   background-repeat: no-repeat;
   background-color: black;
+  box-shadow: 0 4px 8px 0 rbga(0,0,0,10);
   left: 0;
   right: 0;
   height: 100%;
@@ -322,11 +324,10 @@ button {
       margin-bottom: 10%;
     }
     .stats-component-container {
-      left: 45%;
+      left: 47%;
     }
     .stats-button {
-      font-size: 1.2rem;
-      padding: 0;
+      font-size: 1.1rem;
     }
     .stats {
       margin-top: 3%;
@@ -354,7 +355,7 @@ button {
     .start-bottom {
       flex-direction: column;  
       align-items: center; 
-      justify-content: flex-start;       */
+      justify-content: flex-start;      
     }
     .entry-button {
       width: 20%;
@@ -412,7 +413,6 @@ button {
     .entry-button {
       width: 20%;
       margin-top: 0;
-      /* margin-right: 0; */
     }
     .modal {
       width: 70%;
@@ -588,6 +588,5 @@ button {
       width: 10%;
       height: 12%;
       margin-top: 5%;
-      /* margin-right: 5%; */
     }
 } 
